# features

./: .editorconfig  .eslintrc  .gitignore  .prettierignore  .rubocop.yml  AGENTS.md  README.md  build.gradle  composer.json  dotnet.csproj  eslint.config.mjs  features.sln  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  settings.gradle  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: epic.md
.github/actions/: run-dev-server.yaml
.github/actions/download-artifact/: action.yml
.github/workflows/: all-docker-images.yaml  ci.yaml  docker-images.yaml  dotnet.yaml  go.yaml  java.yaml  php.yaml  python.yaml  ruby.yaml  typescript.yaml
.github/workflows/scripts/: latest-version.sh
cmd/: build_image.go  cmd.go  env.go  github.go  latest_sdk_version.go  prepare.go  push_images.go  run.go  run_dotnet.go  run_feature.go  run_go.go  run_java.go  run_php.go  run_python.go  run_ruby.go  run_test.go  run_typescript.go  skipped_tests.go
dockerfiles/: cs.Dockerfile  docker-compose.for-server-image.yaml  docker-compose.yml  go.Dockerfile  java.Dockerfile  php.Dockerfile  py.Dockerfile  rb.Dockerfile  ts.Dockerfile
dockerfiles/dynamicconfig/: docker.yaml
features/: features.go  go.mod  go.sum
features/activity/basic_no_workflow_timeout/: feature.cs  feature.go  feature.java  feature.php  feature.py  feature.rb  feature.ts
features/activity/cancel_abandon/: README.md
features/activity/cancel_try_cancel/: README.md  feature.cs  feature.go  feature.java  feature.php  feature.py  feature.ts  feature.workflow.ts
features/activity/cancel_wait_cancel/: README.md
features/activity/heartbeating/: README.md
features/activity/retry_on_error/: README.md  feature.go  feature.java  feature.php  feature.py  feature.ts  feature.workflow.ts
features/build_id_versioning/: common.go
features/continue_as_new/: README.md
features/data_converter/: messages.pb.go  messages.proto
features/deployment_versioning/: common.go
features/reset/: README.md
features/timers/: README.md
features/tracing/: README.md
harness/go/: go.mod  go.sum
harness/java/: logback.xml
harness/php/: .gitignore  .rr.yaml  composer.json  runner.php  worker.php
harness/python/: feature.py  main.py  util.py
harness/ruby/: Gemfile  harness.gemspec  runner.rb
harness/ts/: activity-interceptors.ts  harness.ts  main.ts  package.json.tmpl  tsconfig.json.tmpl  type-helpers.ts  workflow-globals-injection-interceptors.ts
sdkbuild/: dotnet.go  go.go  java.go  php.go  python.go  ruby.go  sdkbuild.go  typescript.go
(+499 files in other folders)
