[project]
name = "features"
version = "0.1.0"
description = "Temporal SDK Features"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = ["temporalio>=1.23.0,<2"]

[dependency-groups]
dev = [
    "mypy>=0.961,<0.962",
    "ruff>=0.9.6",
]

[tool.hatch.build.targets.sdist]
include = [
    "features",
    "harness/python/**/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "features",
    "harness/python/**/*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
format = [{cmd = "uv run ruff check --select I --fix"}, {cmd = "uv run ruff format"}, ]
lint = [
  {cmd = "uv run ruff check --select I"},
  {cmd = "uv run ruff format --check"},
  {ref = "lint-types"},
]
lint-types = "mypy --explicit-package-bases --namespace-packages ."
